tests/paczka1/small_fuzzy/75337257.err
Error in line 2: nAhZ7u A96 11,3
Error in line 3: nAhZ7u S725 58,2
Error in line 8: 4TgUfGxeRE S725 35,7
